Version 1.67 - 22 June 2007, by Olivier "Nanar" Thauvin

- add osscore, archscore and platformscore function to URPM
- is_platform_compat function to Pkg object
- fix call to rpm function in spec2header()
- fix some compilation warnings


Version 1.66 - 2 July 2007, by Pascal "Pixel" Rigaux

- fix --auto-select skipping some packages because of other packages providing
  a more recent version, but no obsolete between those packages.
  the fix is to revert commit from Aug 2002:
    "fixed propable old package (according provides) requested by
     request_packages_to_upgrade."

Version 1.65 - 22 June 2007, by Olivier Thauvin

- really fix arch_score evaluation

Version 1.64 - 12 June 2007, by Pascal "Pixel" Rigaux

- hack on $pkg->is_arch_compat to make it return true for noarch packages
  when using rpm 4.4.8 (#31314)

Version 1.63 - 9 May 2007, by Pascal "Pixel" Rigaux

- add $trans->Element_fullname

Version 1.62 - 3 May 2007, by Pascal "Pixel" Rigaux

- pass the virtual package name as a parameter to {callback_choices} in
  ->resolve_requested
- add $trans->NElements and $trans->Element_name
  to be able to display name of uninstalled package in callback_uninst
- fix b--obsoletes-->a and c--conflicts-->a prompting for upgrading a
  (need a fix in urpmi which rely on the $state->{rejected} 
   to upgrade (-U) b instead of installing (-i) it)

Version 1.60 - 8 March 2007, by Pascal "Pixel" Rigaux

- more debugging hooks
- create $urpm->packages_providing($name) and use it
- create $urpm->packages_by_name($name)

Version 1.59 - 1 March 2007, by Olivier Thauvin

- rpm 4.4.8 adaptions
- load rpm config files at module load, improve the mechanism

Version 1.58 - 14 February 2007, by Pascal "Pixel" Rigaux

- don't check signature and digest in ->traverse and ->traverse_tag
  (=> x15 speedup, ie 2.5 speedup on urpmi --auto-select and rpmdrake)

Version 1.57 - 9 February 2007, by Pascal "Pixel" Rigaux

- allow upgrading from noarch to x86_64 even if strict-arch
